# sas_migrator.py

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  chat_history_for_codex.txt  environment.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  external-corpus.yml  package.yml
docs/: databricks_target.md  equivalence_validation.md  external_corpus_testing.md  migration_graph.md  migration_program_readiness.md  production_hardening.md  sas_data_ingestion.md  sas_function_numpy_scipy_mapping.md  sas_proc_ecosystem_mapping.md  sas_to_pandas_mapping.md  sas_to_pyspark_mapping.md  saspy_lessons.md
examples/: README.md  convert_folder_example.ps1  convert_folder_example.sh
examples/output_repo/: databricks_plan.json  ecosystem_plan.json  execution_plan.json  file_graph.json  macro_graph.json  manifest.json  migration_readiness.json  pyspark_plan.json  summary.json
scripts/: convert_sas_folder.py  download_sas_code_examples.py
src/sas_migrator/: bundler.py  cli.py  corpus.py  crawler.py  data_io.py  databricks_emitter.py  databricks_plan.py  diagnostics.py  equivalence.py  function_registry.py  graph.py  graphviz_export.py  imports.py  ir.py  macro_engine.py  manifest.py  pipeline.py  (+12 more)
src/sas_migrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_convert_sas_folder_script.py  test_corpus.py  test_data_io.py  test_graphviz_export.py  test_large_pipeline_equivalence.py  test_pipeline.py  test_saspy_mapping.py  test_source_io.py
(+25 files in other folders)
